force-app/main/default/objects/EFT_File_Setting__c/EFT_File_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>EFT File Setting</label>
</CustomObject>