force-app/main/default/objects/EFT_File_Setting__c/fields/Account_Number_For_Returns__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_For_Returns__c</fullName>
    <label>Account Number For Returns</label>
    <length>12</length>
    <type>Text</type>
</CustomField>