force-app/main/default/objects/EFT_File_Setting__c/fields/Transit_Number_For_Returns__c.field-meta.xml
<CustomField>
    <fullName>Transit_Number_For_Returns__c</fullName>
    <label>Transit Number For Returns</label>
    <length>9</length>
    <type>Text</type>
</CustomField>